fix #25 overall tighter whitespace

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -156,7 +156,7 @@
 
 @disclosure-arrow-size:    1rem;
 
-@component-padding:        @modular-scale-l * 1rem;
+@component-padding:        @modular-scale-m * 1rem;
 @component-icon-padding:   @modular-scale-xs * 1rem;
 @component-icon-size:      16/12 * 1rem;
 @component-line-height:    @modular-scale-xxl * 1rem;
